--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,10 @@
 
 <html>
 	<head>
-		<title>mediasoup demo</title>
+		<title>Precisely Greet</title>
 		<meta charset='UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
-		<meta name='description' content='mediasoup demo - Cutting Edge WebRTC Video Conferencing'>
+		<meta name='description' content='Best video rooms for best collaborations by precisely'>
 
 		<link rel='stylesheet' href='/mediasoup-demo-app.css?v=foo2'>
 
