--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,13 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
 		<meta name='description' content='Best video rooms for best collaborations by precisely'>
 
-		<link rel='stylesheet' href='/mediasoup-demo-app.css?v=foo2'>
+		<link rel='stylesheet' href='/precisely-demo-app.css?v=foo2'>
 
 		<script src='/resources/js/antiglobal.js'></script>
+		<script
+			src="https://kit.fontawesome.com/2a3b61097a.js"
+			crossorigin="anonymous"
+		></script>
 		<script>
 			window.localStorage.setItem('debug', '* -engine* -socket* -RIE* *WARN* *ERROR*');
 
@@ -19,11 +23,11 @@
 				setInterval(window.antiglobal, 180000);
 			}
 		</script>
-		<script async src='/mediasoup-demo-app.js?v=foo2'></script>
+		<script async src='/precisely-demo-app.js?v=foo2'></script>
 	</head>
 
 	<body>
-		<div id='mediasoup-demo-app-container'></div>
-		<div id='mediasoup-demo-app-media-query-detector'></div>
+		<div id='precisely-demo-app-container'></div>
+		<div id='precisely-demo-app-media-query-detector'></div>
 	</body>
 </html>
