--- a/app/index.html
+++ b/app/index.html
@@ -1,33 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Precisely Greet</title>
-		<meta charset='UTF-8'>
-		<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
-		<meta name='description' content='Best video rooms for best collaborations by precisely'>
+  <head>
+    <title>Precisely Greet</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta
+      name="description"
+      content="Best video rooms for best collaborations by precisely"
+    />
 
-		<link rel='stylesheet' href='/precisely-demo-app.css?v=foo2'>
+    <link rel="stylesheet" href="/precisely-demo-app.css?v=foo2" />
 
-		<script src='/resources/js/antiglobal.js'></script>
-		<script
-			src="https://kit.fontawesome.com/2a3b61097a.js"
-			crossorigin="anonymous"
-		></script>
-		<script>
-			window.localStorage.setItem('debug', '* -engine* -socket* -RIE* *WARN* *ERROR*');
+    <script src="/resources/js/antiglobal.js"></script>
+    <script
+      src="https://kit.fontawesome.com/2a3b61097a.js"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.localStorage.setItem(
+        "debug",
+        "* -engine* -socket* -RIE* *WARN* *ERROR*"
+      );
 
-			if (window.antiglobal)
-			{
-				window.antiglobal('___browserSync___oldSocketIo', 'io', '___browserSync___', '__core-js_shared__');
-				setInterval(window.antiglobal, 180000);
-			}
-		</script>
-		<script async src='/precisely-demo-app.js?v=foo2'></script>
-	</head>
+      if (window.antiglobal) {
+        window.antiglobal(
+          "___browserSync___oldSocketIo",
+          "io",
+          "___browserSync___",
+          "__core-js_shared__"
+        );
+        setInterval(window.antiglobal, 180000);
+      }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
+    <script async src="/precisely-demo-app.js?v=foo2"></script>
+  </head>
 
-	<body>
-		<div id='precisely-demo-app-container'></div>
-		<div id='precisely-demo-app-media-query-detector'></div>
-	</body>
+  <body>
+    <div id="precisely-demo-app-container"></div>
+    <div id="precisely-demo-app-media-query-detector"></div>
+  </body>
 </html>
